--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "PORT=3000 NODE_ENV=production vue-cli-service serve",
     "start:dev": "PORT=3000 NODE_ENV=development vue-cli-service serve",
-    "compile:sass": "sass 'src/sass/style.scss' 'src/css/style.css' -w",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -13,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "sass": "^1.55.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
@@ -20,11 +20,14 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
+    "sass-loader": "^13.1.0",
+    "style-loader": "^3.3.1",
     "vite": "^3.1.8"
   }
 }
