--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
     "start": "PORT=3000 NODE_ENV=production vue-cli-service serve",
     "start:dev": "PORT=3000 NODE_ENV=development vue-cli-service serve",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-cli-service build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "sass": "^1.55.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
