--- a/drupal/config/sync/contact.form.feedback.yml
+++ b/drupal/config/sync/contact.form.feedback.yml
@@ -7,7 +7,7 @@ _core:
 id: feedback
 label: 'Website feedback'
 recipients:
-  - admin@example.com
+  - cv_maker@gmail.com
 reply: ''
 weight: 0
 message: 'Your message has been sent.'
